# system_design_05

./: README.md
.devcontainer/: devcontainer.json
service_template/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  data.js  data.sql  docker-compose.yml  openapi.yaml  optimization.md  performance_design.md  prometheus.yml  queries.js  queries.sql  requirements-userver-testsuite.txt  schema.sql  schema_design.md  start.sh  validation.js
service_template/configs/: config_vars.yaml  static_config.yaml
service_template/src/: AuthHelper.hpp  Cache.cpp  Cache.hpp  DTO.hpp  JsonHelper.cpp  JsonHelper.hpp  MetricsHandler.cpp  MetricsHandler.hpp  MongoHelper.cpp  MongoHelper.hpp  RateLimiter.cpp  RateLimiter.hpp  Storage.cpp  Storage.hpp  main.cpp
service_template/src/Auth/: AuthHandlers.cpp  AuthHandlers.hpp
service_template/src/Chat/: ChatHandlers.cpp  ChatHandlers.hpp  ChatTests.cpp
service_template/src/User/: UserHandlers.cpp  UserHandlers.hpp  UserTests.cpp
service_template/src/Wall/: WallHandlers.cpp  WallHandlers.hpp  WallTests.cpp
